force-app/main/default/objects/Thread__c/Thread__c.object-meta.xml
<CustomObject>
    <description>Represents a messaging thread</description>
    <label>Thread</label>
    <nameField>
        <label>Thread Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>