force-app/main/default/objects/Thread__c/fields/CRM_External_Actor_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_Actor_Account_ID__c</fullName>
    <description>Formula field to define which party is the external. Field is populated with the Salesforce account ID.</description>
    <formula>CRM_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Actor Account ID</label>
    <type>Text</type>
</CustomField>