force-app/main/default/objects/Thread__c/fields/CRM_External_ActorId__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_ActorId__c</fullName>
    <description>Formula field to define which party is the external. Field is populated with the persons actor id</description>
    <formula>IF(NOT(ISBLANK(CRM_From__r.Contact.Id )),
			 CRM_From__r.Contact.Account.CRM_Person__r.INT_ActorId__c,
			CRM_Recipient__r.Contact.Account.CRM_Person__r.INT_ActorId__c
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Actor ID</label>
    <type>Text</type>
</CustomField>