force-app/main/default/objects/Thread__c/fields/CRM_External_Person_Ident__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_Person_Ident__c</fullName>
    <description>Formula field to define which party is the external. Field is populated with the persons ident (FNR)</description>
    <formula>CRM_Account__r.CRM_Person__r.INT_ActorId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Person Ident</label>
    <type>Text</type>
</CustomField>