force-app/main/default/objects/Thread__c/fields/CRM_From_External__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_External__c</fullName>
    <description>True if the dialogue was initiated by an external user.</description>
    <formula>NOT(ISBLANK(CRM_From__r.ContactId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From External</label>
    <type>Checkbox</type>
</CustomField>