force-app/main/default/objects/Thread__c/fields/CRM_Incorrectly_Sent_Unit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Incorrectly_Sent_Unit__c</fullName>
    <label>Incorrectly Sent Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>