force-app/main/default/objects/Thread__c/fields/CRM_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>CRM_Is_Closed__c</fullName>
    <formula>IF( ISBLANK(CRM_Closed_Date__c) , 
     IF(OR(
          AND(DATEVALUE(CRM_Latest_Message_Datetime__c) &lt;  DATE(2022,01,04),  ISPICKVAL(CRM_Thread_Type__c, &apos;STB&apos;) )  ,
          AND( !ISBLANK(CRM_HenvendelseId__c) ,   ISPICKVAL(CRM_Thread_Type__c, &apos;STO&apos;)  )),
               true,
               false) 
     ,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>