force-app/main/default/objects/Thread__c/fields/CRM_isPublic__c.field-meta.xml
<CustomField>
    <fullName>CRM_isPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Public</label>
    <type>Checkbox</type>
</CustomField>