force-app/main/default/objects/Thread__c/fields/CRM_Journal_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Status_Formula__c</fullName>
    <description>Displays and icon depending on the journal status of the conversation note.</description>
    <formula>CASE(CRM_Journal_Status__c,
					&apos;Journal Completed&apos;, IMAGE(&apos;/logos/Standard/task/logo.svg&apos;, &apos;Journalført Ok&apos;, 20,20),
					&apos;Journal Error&apos;, IMAGE(&apos;/logos/Custom/Flag_Red/logo.png&apos;, &apos;Ikke journalført&apos;, 20, 20),
					IMAGE(&apos;/logos/Custom/Flag_Yellow/logo.png&apos;, &apos;Ikke journalført&apos;, 20, 20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Status</label>
    <type>Text</type>
</CustomField>