force-app/main/default/objects/Thread__c/fields/CRM_Number_of_External_Messages__c.field-meta.xml
<CustomField>
    <fullName>CRM_Number_of_External_Messages__c</fullName>
    <label>Number of External Messages</label>
    <summaryFilterItems>
        <field>Message__c.CRM_External_Message__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.CRM_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>