force-app/main/default/objects/Thread__c/fields/CRM_Thread_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread_Type__c</fullName>
    <label>Thread Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEFAULT</fullName>
                <default>true</default>
                <label>DEFAULT</label>
            </value>
            <value>
                <fullName>STO</fullName>
            </value>
            <value>
                <fullName>STB</fullName>
            </value>
            <value>
                <fullName>AAREG_EXP</fullName>
            </value>
            <value>
                <fullName>AAREG_INT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>