force-app/main/default/objects/Thread__c/fields/NKS_Experience_Site_Source__c.field-meta.xml
<CustomField>
    <fullName>NKS_Experience_Site_Source__c</fullName>
    <description>The source/type of the Thread created by user from Experience Site (innboks). For example: Fedrekvotesaken.</description>
    <label>Experience Site Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NKS_Experience_Site_Source</valueSetName>
    </valueSet>
</CustomField>