force-app/main/default/objects/Thread__c/fields/Redaction_Cause__c.field-meta.xml
<CustomField>
    <fullName>Redaction_Cause__c</fullName>
    <label>Redaction Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sikkerhetshendelse</fullName>
            </value>
            <value>
                <fullName>Utenfor NAVs behandlingsområde</fullName>
            </value>
            <value>
                <fullName>Økonomisk sosialhjelp</fullName>
            </value>
            <value>
                <fullName>Andre årsaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>