force-app/main/default/objects/Thread__c/recordTypes/TAG_Thread.recordType-meta.xml
<RecordType>
    <fullName>TAG_Thread</fullName>
    <active>true</active>
    <label>TAG Thread</label>
</RecordType>