force-app/main/default/objects/Thread__c/listViews/Thread_List_View.listView-meta.xml
<ListView>
    <fullName>Thread_List_View</fullName>
    <columns>NAME</columns>
    <columns>STO_Sensitive_Information_Activated_By__c</columns>
    <columns>STO_Sensitive_Information_Date__c</columns>
    <columns>STO_Sensitive_Information_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STO_Sensitive_Information__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sladdekø</label>
</ListView>