force-app/main/default/objects/Thread__c/listViews/Thread_List_View_BS.listView-meta.xml
<ListView>
    <fullName>Thread_List_View_BS</fullName>
    <columns>NAME</columns>
    <columns>CRM_Thread_Type__c</columns>
    <columns>STO_Sensitive_Information_Activated_By__c</columns>
    <columns>STO_Sensitive_Information_Date__c</columns>
    <columns>Cause__c</columns>
    <columns>Journaled__c</columns>
    <columns>Redaction_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STO_Sensitive_Information__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>STO_Sensitive_Information_Unit__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CRM_Thread_Type__c</field>
        <operation>notEqual</operation>
        <value>STO,CHAT,AG_MLØNN,BTO</value>
    </filters>
    <label>Samtaletråder Brukerstøtte</label>
</ListView>